--- a/index.html
+++ b/index.html
@@ -136,9 +136,11 @@
                     <p>Dolor sit amet consectetur. Consequat eget consectetur maecenas sed molestie malesuada. Ipsum sed sodales risus ut pellentesque vel euismod. </p>
                 </div>
                 <form>
+                    <div class="form-container">
                     <input placeholder="user@gmail.com" type="email" name="" id="">
+                    <button>Subscribe</button>
                 </form>
-                <button>Subscribe</button>
+              </div>
             </div>
 
     </section>
